--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
         intersecting engineering, analytics and design.
         He owns a Bachelor degree in Management Engineering from
         the University of Applied Sciences of Southern Switzerland,
-        with two additional years of Computer Science Engineering from the same institue.
+        with two additional years of Computer Science Engineering from the same institute.
         Roberto has collaborated with established companies, as well as young startups,
         gaining experience in multiple fields, managing any kind of data. He loves to design and develop tools,
         automating processes, connecting dots. With a deep interest in interacting with APIs,
         expert in web scraping, Roberto is able to reverse engineer endpoints,
         understanding how a website works under the wood. He is an active freelancer,
-        consulting companies about managing data. With his open minded apporach,
+        consulting companies about managing data. With his open minded approach,
         he is always ready to discuss ideas and share information.
         In his opinion a modern data professional in addition to deep technical skills,
         requires a strong amount of curiosity and creativity.
@@ -62,8 +62,8 @@
         Back in 2012, a data expert was appetibile on the market if able to manipulate information with Microsoft Excel.
         Around 2015 a strong switch, every analytical job description was requiring at least a programming language.
         Nowadays is not enough, a professional is complete only with advanced statistics, often defined Machine Learning.
-        You can talk with Roberto about any of these topics, about anything regarding data,
-        almost anything about computer, and more generally speaking, about anything else.
+        You can talk to Roberto about any of these topics, about anything regarding data,
+        almost anything about computers, and more generally speaking, about anything else.
       </p>
     </div>
     <div class="section" id="Creativity">
@@ -78,9 +78,9 @@
         and lastly developing personal projects.
         But there is a skill, borderline between soft and hard, too often under the radar,
         particularly important for a data professional, extremely difficult to develop: creativity.
-        Roberto believes creativity can flourish when developed within a framework of positive attitute.
+        Roberto believes creativity can flourish when developed within a framework of positive attitude.
         This framework requires a constant amount of fresh energy, which can only
-        be obtained following and choosing an healty lifestlye.
+        be obtained following and choosing a healty lifestlye.
         Moving, writing, reading, coding, drawing. Different forms Roberto uses to express himself.
       </p>
     </div>
@@ -91,11 +91,11 @@
       <p id="content">
         Roberto considers languages the most valuable asset an individual might have.  
         He paradoxically believes that if any human being would be able to speak any language,
-        wars and inequalities would disappeard.
+        wars and inequalities would disappear.
         New generations must focus on languages, and institutions should put this as first priority,
-        since it is during childhood that the real possibility to master an idiome can occur.
+        since it is during childhood that the real possibility to master an idiom can occur.
         You can fluently communicate with Roberto in Italian, English and German.
-        Due to his origin, French and Spanish can be used for basic converstations.
+        Due to his origin, French and Spanish can be used for basic conversations.
         Currently learning Chinese following a life goal project.
       </p>
     </div>
