--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         Roberto believes creativity can flourish when developed within a framework of positive attitude.
         This framework requires a constant amount of fresh energy, which can only
         be obtained following and choosing a healty lifestlye.
-        Moving, writing, reading, coding, drawing. Different forms Roberto uses to express himself.
+        Moving, writing, reading, coding. Different forms Roberto uses to express himself.
       </p>
     </div>
     <div class="section" id="Languages">
