--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       </div>
       <p id="content">
         Roberto considers languages the most valuable asset an individual might have.  
-        He paradoxically believes that if any human being would be able to speak any language,
+        He utopically believes that if any human being would be able to speak any language,
         wars and inequalities would disappear.
         New generations must focus on languages, and institutions should put this as first priority,
         since it is during childhood that the real possibility to master an idiom can occur.
