--- a/index.html
+++ b/index.html
@@ -45,11 +45,12 @@
       </p>
       <p id="content" style="text-align:center">
           <a href="https://mobile.twitter.com/robimalco" class="fa fa-twitter"></a>
-          <a href="https://www.facebook.com/RMALCOTT" class="fa fa-facebook"></a>
+          <a href="https://github.com/robimalco" class="fa fa-github"></a>
+          <a href="https://angel.co/u/robimalco" class="fa fa-angellist"></a>
           <a href="https://www.linkedin.com/in/malcotti/" class="fa fa-linkedin"></a>
+          <a href="https://www.facebook.com/RMALCOTT" class="fa fa-facebook"></a>
           <a href="https://www.youtube.com/channel/UCnrhsVDMV-jf3-g6hN6fEow?view_as=subscriber" class="fa fa-youtube"></a>
           <a href="https://soundcloud.com/robimalco" class="fa fa-soundcloud"></a>
-          <a href="https://github.com/robimalco" class="fa fa-github"></a>
       </p>
     </div>
     <div class="section" id="Technology">
