--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
           <a href="https://www.facebook.com/RMALCOTT" class="fa fa-facebook"></a>
           <a href="https://www.youtube.com/channel/UCnrhsVDMV-jf3-g6hN6fEow?view_as=subscriber" class="fa fa-youtube"></a>
           <a href="https://soundcloud.com/robimalco" class="fa fa-soundcloud"></a>
+          <a href="https://www.meetup.com/it-IT/members/172332422/" class="fa fa-meetup"></a>
       </p>
     </div>
     <div class="section" id="Technology">
