--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         gaining experience in multiple fields, managing any kind of data. He loves to design and develop tools,
         automating processes, connecting dots. With a deep interest in interacting with APIs,
         expert in web scraping, Roberto is able to reverse engineer endpoints,
-        understanding how a website works under the wood. He is an active freelancer,
+        understanding how a website works under the hood. He is an active freelancer,
         consulting companies about managing data. With his open minded approach,
         he is always ready to discuss ideas and share information.
         In his opinion a modern data professional in addition to deep technical skills,
