--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
         <a href="#Contact">Contact</a><br>
         <a href="#Technology">Technology</a><br>
         <a href="#Creativity">Creativity</a><br>
-        <a href="#Languages">Languages</a>
+        <a href="#Languages">Languages</a><br>
+        <a href="#Hire">Hire me</a>
     </header>
     <div id="intro">
       <p id="content">
@@ -27,7 +28,7 @@
         gaining experience in multiple fields, managing any kind of data. He loves to design and develop tools,
         automating processes, connecting dots. With a deep interest in interacting with APIs,
         expert in web scraping, Roberto is able to reverse engineer endpoints,
-        understanding how a website works under the hood. He is an active freelancer,
+        understanding how a website works under the wood. He is an active freelancer,
         consulting companies about managing data. With his open minded approach,
         he is always ready to discuss ideas and share information.
         In his opinion a modern data professional in addition to deep technical skills,
@@ -40,19 +41,19 @@
       <div class="sub_title">
         Contact
       </div>
-      <p id="content" style="text-align:center">
-        robimalco (at) gmail (dot) com
-      </p>
-      <p id="content" style="text-align:center">
-          <a href="https://mobile.twitter.com/robimalco" class="fa fa-twitter"></a>
-          <a href="https://github.com/robimalco" class="fa fa-github"></a>
-          <a href="https://angel.co/u/robimalco" class="fa fa-angellist"></a>
-          <a href="https://www.linkedin.com/in/malcotti/" class="fa fa-linkedin"></a>
-          <a href="https://www.facebook.com/RMALCOTT" class="fa fa-facebook"></a>
-          <a href="https://www.youtube.com/channel/UCnrhsVDMV-jf3-g6hN6fEow?view_as=subscriber" class="fa fa-youtube"></a>
-          <a href="https://soundcloud.com/robimalco" class="fa fa-soundcloud"></a>
-          <a href="https://www.meetup.com/it-IT/members/172332422/" class="fa fa-meetup"></a>
-      </p>
+      <div style="text-align:center">
+        <p id="content">
+          robimalco (at) gmail (dot) com
+        </p>
+        <p id="content">
+            <a href="https://mobile.twitter.com/robimalco" class="fa fa-twitter"></a>
+            <a href="https://www.facebook.com/RMALCOTT" class="fa fa-facebook"></a>
+            <a href="https://www.linkedin.com/in/malcotti/" class="fa fa-linkedin"></a>
+            <a href="https://www.youtube.com/channel/UCnrhsVDMV-jf3-g6hN6fEow?view_as=subscriber" class="fa fa-youtube"></a>
+            <a href="https://soundcloud.com/robimalco" class="fa fa-soundcloud"></a>
+            <a href="https://github.com/robimalco" class="fa fa-github"></a>
+        </p>
+      </div>
     </div>
     <div class="section" id="Technology">
       <div class="sub_title">
@@ -65,7 +66,7 @@
         Around 2015 a strong switch, every analytical job description was requiring at least a programming language.
         Nowadays is not enough, a professional is complete only with advanced statistics, often defined Machine Learning.
         You can talk to Roberto about any of these topics, about anything regarding data,
-        almost anything about computers, and more generally speaking, about anything else.
+        almost anything about computers, and if you would, about anything else.
       </p>
     </div>
     <div class="section" id="Creativity">
@@ -99,6 +100,18 @@
         You can fluently communicate with Roberto in Italian, English and German.
         Due to his origin, French and Spanish can be used for basic conversations.
         Currently learning Chinese following a life goal project.
+      </p>
+    </div>
+    <div class="section" id="Hire">
+      <div class="sub_title">
+        Hire me
+      </div>
+      <p id="content">
+        Starting a new project, interacting with people, understanding requirements,
+        hypothesizing ideas, presenting scenarios, delivering results.
+        A symbiosis between low latency and quality is the de facto standard.
+        In this hyper connected world, along this rollercoast, having trustful partners is a must.
+        <a href="/home/robimalco/Desktop/hire.html">Find out more.</a>
       </p>
     </div>
   <div></div>
