Moving on with hire.html

--- a/hire.html
+++ b/hire.html
@@ -2,40 +2,43 @@
 <html lang="en-GB">
 	<head>
 		<title>Data Engineering - Analytics - Design</title>
+    	<link rel="stylesheet" href="hire.css"/>
 	</head>
 	<body>
 		<header>
-			<div>
-				<h1>
-					Data Engineering - Analytics - Design
-				</h1>
+			<div id="header_separator"></div>
+			<div id="main_title">
+				<div class="a" ><b>Data</b> Analytics</div>
+				<div class="e"><b>Data</b> Engineering</div>
+				<div class="d"><b>Data</b> Design</div>
 			</div>
+			<div id="header_separator"></div>
 		</header>
-		<h2>Audits</h2>
-		<p>
-			<b>Your data are not moving fludly within your organization, and I know why.</b>
-			Being data driven is the most crucial part of any digital business.
-			In a fast-paced environment rarely it is possibile to move things forward, 
-			while leveraging the quality of the data's flow.
-			Expertise and experiences are required to tackle bottle necks,
-			sometimes surprisingly just observing things from a different point of view.
-			Let's discover together how to increase your data efficiency.
-		</p>
-		<h2>Consultancy</h2>
-		<p>
-			<b>Are you satisifed about the usage of your data?</b>
-			How much a manual and repetitive data manipulation cost you?
-			Are there inefficiencies hidden within your processes?
-			How much knowledge is lost because of lack of fluidity?
-			Let's dive into these questions to find out answers and more opportunities.
-		</p>
-		<h2>Training</h2>
-		<p>
-			<b>Leaders let actions speak by themself.</b>
-			Allow your team to be self-sufficient, with the ability to build and maintain your own custom solutions.
-			An homogeneous technical growth with the implicit goal to implement a true data driven culture.
-			Never take a non data-drive decision again.
- 		</p>
+		<div class="services">
+			<p>
+				<span id="bigger">Audits</span><br>
+				<b>Your data are not moving fludly within your organization, and I know why.</b><br>
+				In a fast-paced environment rarely it is possibile to move things forward 
+				while leveraging data flow's quality.
+				Expertises are required to tackle bottle necks, often just observing things from different point of views.
+				Let's discover together how to increase your efficiency.
+			</p>
+			<p>
+				<span id="bigger">Consultancy</span><br>
+				<b>Are you satisifed about how your organisation consumes data?</b><br>
+				How much a manual and repetitive data manipulation cost you?
+				Are there inefficiencies hidden within your processes?
+				How much knowledge is lost because of lack of fluidity?
+				Let's dive into these questions to find out answers and more opportunities.
+			</p>
+			<p>
+				<span id="bigger">Training</span><br>
+				<b>Leaders let actions speak by themself.</b><br>
+				Allow your team to be self-sufficient, with the ability to build and maintain your own custom solutions.
+				An homogeneous technical growth with the implicit goal to implement a true data driven culture.
+				Never take a non data-drive decision again.
+	 		</p>
+	 	</div>
 		<h3>Tech stack:</h3>
 		<ul>
 			<li>
