--- a/index.html
+++ b/index.html
@@ -3,19 +3,23 @@
   <head>
     <title>Roberto Malcotti</title>
     <link rel="shortcut icon" type="image/x-icon" href="/images/favicon/favicon.ico">
-    <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="index.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
     <header>
-      <p id="main_title">
-        Roberto Malcotti
-      </p>
-        <a href="#Contact">Contact</a><br>
-        <a href="#Technology">Technology</a><br>
-        <a href="#Creativity">Creativity</a><br>
-        <a href="#Languages">Languages</a><br>
-        <a href="#Hire">Hire me</a>
+      <div id="header_separator"></div>
+      <div id="header_main"></div>      
+        <p id="main_title">
+          Roberto Malcotti
+        </p>
+          <a href="#Contact">Contact</a><br>
+          <a href="#Technology">Technology</a><br>
+          <a href="#Creativity">Creativity</a><br>
+          <a href="#Languages">Languages</a><br>
+          <a href="#Hire">Hire me</a>
+      </div>
+      <div id="header_separator"></div>
     </header>
     <div id="intro">
       <p id="content">
@@ -111,7 +115,7 @@
         hypothesizing ideas, presenting scenarios, delivering results.
         A symbiosis between low latency and quality is the de facto standard.
         In this hyper connected world, along this rollercoast, having trustful partners is a must.
-        <a href="/home/robimalco/Desktop/hire.html">Find out more.</a>
+        <a href="hire.html">Find out more.</a>
       </p>
     </div>
   <div></div>
