--- a/index.html
+++ b/index.html
@@ -27,16 +27,11 @@
         intersecting engineering, analytics and design.
         He owns a Bachelor degree in Management Engineering from
         the University of Applied Sciences of Southern Switzerland,
-        with two additional years of Computer Science Engineering from the same institute.
+        with two additional years of Computer Science from the same institute.
         Roberto has collaborated with established companies, as well as young startups,
-        gaining experience in multiple fields, managing any kind of data. He loves to design and develop tools,
-        automating processes, connecting dots. With a deep interest in interacting with APIs,
-        expert in web scraping, Roberto is able to reverse engineer endpoints,
-        understanding how a website works under the wood. He is an active freelancer,
-        consulting companies about managing data. With his open minded approach,
-        he is always ready to discuss ideas and share information.
-        In his opinion a modern data professional in addition to deep technical skills,
-        requires a strong amount of curiosity and creativity.
+        gaining experience in multiple fields, diving into any kind of data.
+        He loves to design and develop tools, automating processes, connecting dots.
+        As freelancer, he helps companies to get more out from their data.
         In his free time online, he explores the interaction between art and technology,
         while offline, he leverages his ability to move, communicate, write and read.
       </p>
@@ -64,13 +59,13 @@
         Technology
       </div>
       <p id="content">
-        Technology is shaping the present and the future of any thinkable area.
-        Roberto has the opportunity to ride this wave and to make a living out of it.
-        Back in 2012, a data expert was appetibile on the market if able to manipulate information with Microsoft Excel.
-        Around 2015 a strong switch, every analytical job description was requiring at least a programming language.
-        Nowadays is not enough, a professional is complete only with advanced statistics, often defined Machine Learning.
+        Technology is shaping any thinkable area.
+        Roberto has the opportunity to ride this wave making a living out of it.
+        Back in 2012, a data expert was appetibile on the market if proficient with Microsoft Excel.
+        Around 2015 a strong switch, every analytical job was requiring at least a programming language.
+        Nowadays is not enough, a professional is complete only with machine learning skills.
         You can talk to Roberto about any of these topics, about anything regarding data,
-        almost anything about computers, and if you would, about anything else.
+        almost anything about computers, and if you would, anything else.
       </p>
     </div>
     <div class="section" id="Creativity">
@@ -79,16 +74,14 @@
       </div>
       <p id="content">
         A profile can acquire technical skills in multiple ways.
-        Firstly, with academical education,
-        secondly with work experience,
-        thirdly following ad-hoc courses,
-        and lastly developing personal projects.
-        But there is a skill, borderline between soft and hard, too often under the radar,
+        Firstly, with academical education, secondly with work experience,
+        thirdly following ad-hoc courses, lastly, developing personal projects.
+        But there is a skill, borderline between soft and hard,
         particularly important for a data professional, extremely difficult to develop: creativity.
         Roberto believes creativity can flourish when developed within a framework of positive attitude.
         This framework requires a constant amount of fresh energy, which can only
-        be obtained following and choosing a healty lifestlye.
-        Moving, writing, reading, coding. Different forms Roberto uses to express himself.
+        be obtained choosing a healty lifestyle. Roberto's work reflects this attitude,
+        and his creativity gladly follows him along his journey.
       </p>
     </div>
     <div class="section" id="Languages">
@@ -113,7 +106,7 @@
       <p id="content">
         Starting a new project, interacting with people, understanding requirements,
         hypothesizing ideas, presenting scenarios, delivering results.
-        A symbiosis between low latency and quality is the de facto standard.
+        A symbiosis between low latency and quality is de facto standard.
         In this hyper connected world, along this rollercoast, having trustful partners is a must.
         <a href="hire.html">Find out more.</a>
       </p>
