--- a/hire.html
+++ b/hire.html
@@ -17,26 +17,27 @@
 		<div class="services">
 			<p>
 				<span id="bigger">Audits</span><br>
-				<b>Your data are not moving fludly within your organization, and I know why.</b><br>
-				In a fast-paced environment rarely it is possibile to move things forward 
-				while leveraging data flow's quality.
-				Expertises are required to tackle bottle necks, often just observing things from different point of views.
+				<b>Your data are not moving fluidly within your organization, and I know why.</b><br>
+				In a fast-paced environment rarely it is possible to move things forward 
+				while leveraging data flow's quality. Expertises are required to tackle bottle necks,
+				often just observing things from different point of views.
 				Let's discover together how to increase your efficiency.
 			</p>
 			<p>
 				<span id="bigger">Consultancy</span><br>
-				<b>Are you satisifed about how your organisation consumes data?</b><br>
-				How much a manual and repetitive data manipulation cost you?
+				<b>Are you satisfied about how your organisation consumes data?</b><br>
+				How much does a manual and repetitive data manipulation cost you?
 				Are there inefficiencies hidden within your processes?
 				How much knowledge is lost because of lack of fluidity?
 				Let's dive into these questions to find out answers and more opportunities.
 			</p>
 			<p>
 				<span id="bigger">Training</span><br>
-				<b>Leaders let actions speak by themself.</b><br>
-				Allow your team to be self-sufficient, with the ability to build and maintain your own custom solutions.
-				An homogeneous technical growth with the implicit goal to implement a true data driven culture.
-				Never take a non data-drive decision again.
+				<b>Leaders let actions speak by themselves.</b><br>
+				Allow your team to be self-sufficient,
+				with the ability to build and maintain your own custom solutions.
+				A homogeneous technical growth with the implicit goal to implement a true data driven culture.
+				Talk less, build more. Never take a non data-drive decision again.
 	 		</p>
 	 	</div>
 		<h3>Tech stack:</h3>
