--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
           robimalco (at) gmail (dot) com
         </p>
         <p id="content">
-            <a href="https://mobile.twitter.com/robimalco" class="fa fa-twitter"></a>
-            <a href="https://www.facebook.com/RMALCOTT" class="fa fa-facebook"></a>
-            <a href="https://www.linkedin.com/in/malcotti/" class="fa fa-linkedin"></a>
-            <a href="https://www.youtube.com/channel/UCnrhsVDMV-jf3-g6hN6fEow?view_as=subscriber" class="fa fa-youtube"></a>
-            <a href="https://soundcloud.com/robimalco" class="fa fa-soundcloud"></a>
-            <a href="https://github.com/robimalco" class="fa fa-github"></a>
+            <a href="https://mobile.twitter.com/robimalco" class="fa fa-twitter" target="_blank"></a>
+            <a href="https://www.facebook.com/RMALCOTT" class="fa fa-facebook" target="_blank"></a>
+            <a href="https://www.linkedin.com/in/malcotti/" class="fa fa-linkedin" target="_blank"></a>
+            <a href="https://www.youtube.com/channel/UCnrhsVDMV-jf3-g6hN6fEow?view_as=subscriber" class="fa fa-youtube" target="_blank"></a>
+            <a href="https://soundcloud.com/robimalco" class="fa fa-soundcloud" target="_blank"></a>
+            <a href="https://github.com/robimalco" class="fa fa-github" target="_blank"></a>
         </p>
       </div>
     </div>
@@ -107,8 +107,8 @@
         Starting a new project, interacting with people, understanding requirements,
         hypothesizing ideas, presenting scenarios, delivering results.
         A symbiosis between low latency and quality is de facto standard.
-        In this hyper connected world, along this rollercoast, having trustful partners is a must.
-        <a href="hire.html">Find out more.</a>
+        In this hyper connected world, along this rollercoast, having trustful partners is a must.<br>
+        <a href="hire.html" target="_blank">Find out more.</a>
       </p>
     </div>
   <div></div>
