--- a/hire.html
+++ b/hire.html
@@ -14,7 +14,7 @@
 			</div>
 			<div id="header_separator"></div>
 		</header>
-		<div class="services">
+		<div class="section">
 			<p>
 				<span id="bigger">Audits</span><br>
 				<b>Your data are not moving fluidly within your organization, and I know why.</b><br>
@@ -40,72 +40,73 @@
 				Talk less, build more. Never take a non data-drive decision again.
 	 		</p>
 	 	</div>
-		<h3>Tech stack:</h3>
-		<ul>
-			<li>
-				<a>SQL</a>
-			</li>
-			<li>
-				<a>Python</a>
-			</li>
-			<li>
-				<a>Google Cloud Platform</a>
-			</li>
-			<li>
-				<a>Spreadsheet</a>
-			</li>
-			<li>
-				<a>Google Script</a>
-			</li>
-			<li>
-				<a>Google Dataprep</a>
-			</li>
-			<li>
-				<a>Google Colab</a>
-			</li>
-			<li>
-				<a>Jupyter</a>
-			</li>
-			<li>
-				<a>Pandas</a>
-			</li>
-			<li>
-				<a>BeautifulSoup</a>
-			</li>
-			<li>
-				<a>Requests</a>
-			</li>
-			<li>
-				<a>Selenium</a>
-			</li>
-			<li>
-				<a>Zapier</a>
-			</li>
-			<li>
-				<a>Chrome Console</a>
-			</li>
-			<li>
-				<a>Google Cloud Functions</a>
-			</li>
-			<li>
-				<a>Big Query</a>
-			</li>
-			<li>
-				<a>Google Analytics</a>
-			</li>
-			<li>
-				<a>Google Ads</a>
-			</li>
-			<li>
-				<a>Google Drive</a>
-			</li>
-			<li>
-				<a>JSON</a>
-			</li>
-			<li>
-				<a>Google Firebase</a>
-			</li>
-		</ul>
+		<div class="section">
+			<span id="bigger">Tech stack</span>
+			<ul class="client-list">
+				<li class="client-list__item">
+					<a href="https://en.wikipedia.org/wiki/SQL"><img src="images/tech/sql.png" class="client-list__logo" alt="SQL" loading="lazy" /></a>
+				</li>
+					<a href="https://www.python.org"><img src="images/tech/python.png" class="client-list__logo" alt="python" loading="lazy" /></a>
+				</li>
+				<li class="client-list__item">
+					<a href="https://cloud.google.com"><img src="images/tech/gcp.png" class="client-list__logo" alt="gcp" loading="lazy" /></a>
+				</li>
+				<li class="client-list__item">
+					<a href="https://www.google.com/sheets/about/"><img src="images/tech/sheet.png" class="client-list__logo" alt="sheet" loading="lazy" /></a>
+				</li>
+				<li class="client-list__item">
+					<a href="https://developers.google.com/apps-script"><img src="images/tech/app_script.png" class="client-list__logo" alt="app_script" loading="lazy" /></a>
+				</li>
+				<li class="client-list__item">
+					<a>Dataprep</a>
+				</li>
+				<li class="client-list__item">
+					<a>Datastudio</a>
+				</li>
+				<li class="client-list__item">
+					<a>Colab</a>
+				</li>
+				<li class="client-list__item">
+					<a>Jupyter</a>
+				</li>
+				<li class="client-list__item">
+					<a>Pandas</a>
+				</li>
+				<li class="client-list__item">
+					<a>BeautifulSoup</a>
+				</li>
+				<li class="client-list__item">
+					<a>Requests</a>
+				</li>
+				<li class="client-list__item">
+					<a>Selenium</a>
+				</li>
+				<li class="client-list__item">
+					<a>Zapier</a>
+				</li>
+				<li class="client-list__item">
+					<a>Chrome</a>
+				</li>
+				<li class="client-list__item">
+					<a>Cloud Functions</a>
+				</li>
+				<li class="client-list__item">
+					<a>Big Query</a>
+				</li>
+				<li class="client-list__item">
+					<a>Analytics</a>
+				</li>
+				<li class="client-list__item">
+					<a>Ads</a>
+				</li>
+				<li>
+					<a>Drive</a>
+				</li>
+				<li class="client-list__item">
+					<a>Firebase</a>
+				</li>
+			</ul>
+		</div>
 		<h3>Trusted by:</h3>
 		<ul>
 			<li>
