more images and technoligies

--- a/hire.html
+++ b/hire.html
@@ -44,39 +44,39 @@
 			<span id="bigger">Tech stack</span>
 			<ul class="client-list">
 				<li class="client-list__item">
-					<a href="https://en.wikipedia.org/wiki/SQL"><img src="images/tech/sql.png" class="client-list__logo" alt="SQL" loading="lazy" /></a>
+					<a href="https://en.wikipedia.org/wiki/SQL" target="_blank"><img src="images/tech/sql.png" class="client-list__logo" alt="SQL" loading="lazy" target="_blank"></a>
 				</li>
-					<a href="https://www.python.org"><img src="images/tech/python.png" class="client-list__logo" alt="python" loading="lazy" /></a>
-				</li>
-				<li class="client-list__item">
-					<a href="https://cloud.google.com"><img src="images/tech/gcp.png" class="client-list__logo" alt="gcp" loading="lazy" /></a>
+					<a href="https://www.python.org" target="_blank"><img src="images/tech/python.png" class="client-list__logo" alt="python" loading="lazy" target="_blank"></a>
 				</li>
 				<li class="client-list__item">
-					<a href="https://www.google.com/sheets/about/"><img src="images/tech/sheet.png" class="client-list__logo" alt="sheet" loading="lazy" /></a>
+					<a href="https://cloud.google.com" target="_blank"><img src="images/tech/gcp.png" class="client-list__logo" alt="gcp" loading="lazy"></a>
 				</li>
 				<li class="client-list__item">
-					<a href="https://developers.google.com/apps-script"><img src="images/tech/app_script.png" class="client-list__logo" alt="app_script" loading="lazy" /></a>
+					<a href="https://www.google.com/sheets/about/" target="_blank"><img src="images/tech/sheet.png" class="client-list__logo" alt="sheet" loading="lazy"></a>
 				</li>
 				<li class="client-list__item">
-					<a>Dataprep</a>
+					<a href="https://developers.google.com/apps-script" target="_blank"><img src="images/tech/app_script.png" class="client-list__logo" alt="app_script" loading="lazy"></a>
 				</li>
 				<li class="client-list__item">
-					<a>Datastudio</a>
+					<a href="https://cloud.google.com/dataprep" target="_blank"><img src="images/tech/dataprep.png" class="client-list__logo" alt="dataprep" loading="lazy"></a>
 				</li>
 				<li class="client-list__item">
-					<a>Colab</a>
+					<a href="https://datastudio.google.com" target="_blank"><img src="images/tech/datastudio.png" class="client-list__logo" alt="datastudio" loading="lazy"></a>
 				</li>
 				<li class="client-list__item">
-					<a>Jupyter</a>
+					<a href="https://colab.research.google.com" target="_blank"><img src="images/tech/colab.png" class="client-list__logo" alt="colab" loading="lazy"></a>
 				</li>
 				<li class="client-list__item">
-					<a>Pandas</a>
+					<a href="https://pandas.pydata.org" target="_blank"><img src="images/tech/pandas.png" class="client-list__logo" alt="pandas" loading="lazy"></a>
 				</li>
 				<li class="client-list__item">
-					<a>BeautifulSoup</a>
+					<a href="https://jupyter.org" target="_blank"><img src="images/tech/jupyter.png" class="client-list__logo" alt="jupyter" loading="lazy"></a>
 				</li>
 				<li class="client-list__item">
-					<a>Requests</a>
+					<a href="https://pypi.org/project/beautifulsoup4/#description" target="_blank"><img src="images/tech/beautifulsoup.png" class="client-list__logo" alt="beautifulsoup" loading="lazy"></a>
+				</li>
+				<li class="client-list__item">
+					<a href="https://requests.readthedocs.io/en/master/" target="_blank"><img src="images/tech/requests.png" class="client-list__logo" alt="requests" loading="lazy"></a>
 				</li>
 				<li class="client-list__item">
 					<a>Selenium</a>
