all tech images

--- a/hire.html
+++ b/hire.html
@@ -67,6 +67,30 @@
 					<a href="https://colab.research.google.com" target="_blank"><img src="images/tech/colab.png" class="client-list__logo" alt="colab" loading="lazy"></a>
 				</li>
 				<li class="client-list__item">
+					<a href="https://developers.google.com/web/tools/chrome-devtools" target="_blank"><img src="images/tech/chrome.png" class="client-list__logo" alt="chrome" loading="lazy"></a>
+				</li>
+				<li class="client-list__item">
+					<a href="https://cloud.google.com/functions" target="_blank"><img src="images/tech/cloud_functions.png" class="client-list__logo" alt="cloud_functions" loading="lazy"></a>
+				</li>
+				<li class="client-list__item">
+					<a href="https://cloud.google.com/bigquery" target="_blank"><img src="images/tech/bigquery.png" class="client-list__logo" alt="bigquery" loading="lazy"></a>
+				</li>
+				<li class="client-list__item">
+					<a href="https://analytics.google.com" target="_blank"><img src="images/tech/googleanalytics.png" class="client-list__logo" alt="googleanalytics" loading="lazy"></a>
+				</li>
+				<li class="client-list__item">
+					<a href="https://ads.google.com" target="_blank"><img src="images/tech/ads.png" class="client-list__logo" alt="ads" loading="lazy"></a>
+				</li>
+				<li class="client-list__item">
+					<a href="https://www.google.com/drive/" target="_blank"><img src="images/tech/drive.png" class="client-list__logo" alt="drive" loading="lazy"></a>
+				</li>
+				<li class="client-list__item">
+					<a href="https://firebase.google.com" target="_blank"><img src="images/tech/firebase.png" class="client-list__logo" alt="firebase" loading="lazy"></a>
+				</li>
+				<li class="client-list__item">
+					<a href="https://cloud.google.com/shell" target="_blank"><img src="images/tech/googleshell.png" class="client-list__logo" alt="googleshell" loading="lazy"></a>
+				</li>
+				<li class="client-list__item">
 					<a href="https://pandas.pydata.org" target="_blank"><img src="images/tech/pandas.png" class="client-list__logo" alt="pandas" loading="lazy"></a>
 				</li>
 				<li class="client-list__item">
@@ -79,31 +103,13 @@
 					<a href="https://requests.readthedocs.io/en/master/" target="_blank"><img src="images/tech/requests.png" class="client-list__logo" alt="requests" loading="lazy"></a>
 				</li>
 				<li class="client-list__item">
-					<a>Selenium</a>
+					<a href="https://selenium-python.readthedocs.io" target="_blank"><img src="images/tech/selenium.png" class="client-list__logo" alt="selenium" loading="lazy"></a>
 				</li>
 				<li class="client-list__item">
-					<a>Zapier</a>
+					<a href="https://zapier.com" target="_blank"><img src="images/tech/zapier.png" class="client-list__logo" alt="zapier" loading="lazy"></a>
 				</li>
 				<li class="client-list__item">
-					<a>Chrome</a>
-				</li>
-				<li class="client-list__item">
-					<a>Cloud Functions</a>
-				</li>
-				<li class="client-list__item">
-					<a>Big Query</a>
-				</li>
-				<li class="client-list__item">
-					<a>Analytics</a>
-				</li>
-				<li class="client-list__item">
-					<a>Ads</a>
-				</li>
-				<li>
-					<a>Drive</a>
-				</li>
-				<li class="client-list__item">
-					<a>Firebase</a>
+					<a href="https://github.com" target="_blank"><img src="images/tech/github.png" class="client-list__logo" alt="github" loading="lazy"></a>
 				</li>
 			</ul>
 		</div>
